# rust-raytracing

./: Cargo.toml  LICENSE  README.md  image.ppm
src/: aabb.rs  aarect.rs  box_struct.rs  bvh.rs  camera.rs  cli.rs  color.rs  constant_medium.rs  gui.rs  hittable.rs  hittable_list.rs  main.rs  material.rs  moving_sphere.rs  perlin.rs  ray.rs  render.rs  scenes.rs  sphere.rs  texture.rs  vec3.rs
