[package]
name = "rust-raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
image = "0.24.5"
threadpool = "1.8.1"
num_cpus = "1.15.0"
egui = "0.20.1"
eframe = "0.20.1"
